--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production",
-    "dev": "webpack --mode=development"
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack --config webpack.dev.config.js"
   },
   "author": "jFarrow02",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "prop-types": "^15.7.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
