--- a/package.json
+++ b/package.json
@@ -2,21 +2,29 @@
   "name": "biblios",
   "version": "1.0.0",
   "description": "A react UI component library",
-  "main": "./dist/bundle.dist.js",
-  "module": "./dist/bundle.dist.js",
+  "main": "./biblios/index.js",
+  "module": "./biblios/index.js",
   "package-name": "biblios",
   "module-name": "biblios",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
-    "dev": "webpack --config webpack.dev.config.js"
+    "dev": "webpack --config webpack.dev.config.js",
+    "babel:package": "set NODE_ENV=production && babel src/components --out-dir biblios --minified",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "jFarrow02",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
+    "@storybook/react": "^5.2.8",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "prop-types": "^15.7.2",
