--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "package-name": "biblios",
   "module-name": "biblios",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --colors",
     "build": "webpack --config webpack.config.js",
     "dev": "webpack --config webpack.dev.config.js",
     "babel:package": "set NODE_ENV=production && babel src/components --out-dir biblios --ignore src/**/*.test.js --minified",
@@ -25,10 +25,16 @@
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addons": "^5.2.8",
     "@storybook/react": "^5.2.8",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "clean-webpack-plugin": "^3.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.9.0",
     "prop-types": "^15.7.2",
+    "react-test-renderer": "^16.12.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
@@ -36,5 +42,26 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "<rootDir>/src/components/**/*.{js, jsx}",
+      "!**/node_modules/**",
+      "!**/vendor/**"
+    ],
+    "coverageDirectory": "<rootDir>/coverage",
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/.storybook",
+      "<rootDir>/biblios",
+      "<rootDir>/dist",
+      "<rootDir>/node_modules",
+      "<rootDir>/stories",
+      "<rootDir>/src/components/*index.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   }
 }
